--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "svelte": "^3.44.3"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "sass-loader": "^12.4.0",
     "sirv-cli": "^1.0.0",
     "svelte-loader": "^3.1.2",
